# Silta

./: .gitattributes  .gitignore  eslint.config.mjs  package.json  tsconfig.json  unocss.config.ts  vite.config.ts
src/: App.scss  App.tsx  main.tsx  routes.tsx  tauri-types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/commands/: gallery.rs  image.rs  local_gallery.rs  local_video.rs  mod.rs  remote_gallery.rs  video.rs
src-tauri/src/concurrency/: limiter.rs
src-tauri/src/models/: gallery.rs  mod.rs  page_type.rs
src-tauri/src/models/gallery/: config.rs  image_info.rs  mod.rs
src-tauri/src/services/gallery/: folder_impl.rs  mod.rs  service.rs  traits.rs  zip_impl.rs
src-tauri/src/services/image/: darkness.rs  mod.rs  thumbnail.rs
src-tauri/src/utils/: cache_paths.rs  image.rs  mod.rs
src/api/: gallery.ts  image.ts  video.ts
src/components/: Settings.tsx
src/constants/: plugins.ts  sidebarItems.ts  tabPage.ts
src/layouts/: MainLayout.tsx  index.ts
src/pages/: PageProps.ts  index.ts
src/panels/: FolderPanel.tsx  TagsPanel.tsx  index.ts
src/settings/: background.ts  index.ts
src/store/: index.ts
src/styles/: colors.scss  global-color-variable.scss  tokens.tsx  transformer-color-variable.ts
src/test/: renderWithProviders.tsx  setup.tsx
src/theme/: ThemeContext.tsx  ThemeProvider.tsx  useTheme.ts
src/types/: fluentui.d.ts  shims.d.ts
src/utils/: common.test.ts  common.ts  pathUtils.test.ts  pathUtils.ts  (+1 more)
(+259 files in other folders)
