[package]
name = "silta"
version = "0.1.0"
description = "Silta is a cross-platform, open-source, and free software for managing your files and folders."
authors = [ "MidnightCrowing" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "silta_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "protocol-asset", "devtools"] }
tauri-types = "0"
tauri-plugin-opener = "2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
natord = "1.0"
image = "0.25"
base64 = "0.22"
anyhow = "1"
zip = "2"
sha2 = "0"
dirs-next = "2"
once_cell = "1.21"
tokio = { version = "1.44", features = ["time"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
